--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 
 <!-- bloc-1-presentation -->
 <main>
-	<section>
-	<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+	<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture b-parallax" id="bloc-1-hero">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
@@ -73,7 +72,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
 </section>
 <!-- bloc-1-presentation END -->
 
@@ -134,7 +132,7 @@
 
 <!-- bloc-3-what-i-do -->
 <section>
-<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture b-parallax" id="bloc-3-what-i-do">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
@@ -207,7 +205,7 @@
 
 <!-- bloc-5-cta -->
 <section>
-<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
 			<h2 class="mg-md text-center tc-white">
@@ -221,6 +219,11 @@
 </div>
 <!-- bloc-5-cta END -->
 </main>
+
+<!-- ScrollToTop Button -->
+<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+<!-- ScrollToTop Button END-->
+
 <!-- Footer - bloc-8 -->
 <footer>
 <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
